--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "install": "npm install --legacy-peer-deps"
+    "install": "npm install"
   },
   "keywords": [],
   "author": "",
