--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "telegraf": "^4.16.3",
     "telegraf-calendar-telegram": "^2.0.2",
     "telegraf-i18n": "^6.6.0"
+  },
+  "engines": {
+    "node": "18"
   }
 }
