--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "cross-env NODE_OPTIONS=--openssl-legacy-provider node index.js"
   },
   "keywords": [],
   "author": "",
@@ -23,5 +23,8 @@
   },
   "engines": {
     "node": "18"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
