--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "fuse.js": "^7.0.0",
+    "fuzzball": "^2.1.3",
     "googleapis": "^144.0.0",
+    "node-cron": "^3.0.3",
     "papaparse": "^5.4.1",
     "telegraf": "^4.16.3",
     "telegraf-calendar-telegram": "^2.0.2",
